# replicated-database

./: .gitignore  CMakeLists.txt  README.md  chaos-monkey.py  check-details.sh  client-server.cc  client-service.cc  raft-control.cc  raft-grpc.cc  raft-leveldb.cc  raft-main.cc  raft-persistence.cc  raft.cc
CMake2/: Findleveldb.cmake
design-plots/: a.txt
includes/: client-server.h  client-service.h  concurrent-queue.h  raft-client.h  raft-control.h  raft-grpc.h  raft-leveldb.h  raft-persistence.h  raft-server.h  raft.h  utils.h
libmemcached-example/: readme.md
plotting-script/: plotting.py
plotting-script/data/: clientLatency_1470.csv  clientLatency_2500.csv
plotting-script/data/crash_impact_election_timeout_2-3/: clientLatency_1020.csv  clientLatency_390.csv  clientLatency_980.csv
plotting-script/data/latvsthrpt-5000/: clientLatency_1000.csv  clientLatency_1250.csv  clientLatency_1666.csv  clientLatency_178.csv  clientLatency_2500.csv  clientLatency_333.csv  clientLatency_454.csv  clientLatency_48.csv  clientLatency_555.csv  clientLatency_714.csv  clientLatency_833.csv  clientLatency_92.csv
plotting-script/data/latvsthrpt-50000/: clientLatency_1063.csv  clientLatency_1351.csv  clientLatency_1470.csv  clientLatency_1612.csv  clientLatency_1666.csv  clientLatency_2083.csv  clientLatency_393.csv  clientLatency_641.csv
proto/: CMakeLists.txt  replicated-database.proto
test/: CMakeLists.txt  test-client.cc  test-client2.cc  test-log.cc  test-perf.cc  test-queue.cc  test1.cc
